# subject_observers

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  configuration.toml
apps/: CMakeLists.txt
apps/subject_observers_simulation/: CMakeLists.txt  receiver.cpp  subject_data_generator.cpp
include/sim/: ifc_observer.h  player.h  sensor.h
include/utils/: config.h  rng.h
src/: CMakeLists.txt
src/protobuf/: position.proto
src/sim/: player.cpp  player.h  sensor.cpp  sensor.h  simulation.cpp  simulation.h
src/utils/: config.cpp  config.h  rng.h  vectormath.h
tests/: CMakeLists.txt  rng_test.cpp  vector_arithmetic_test.cpp
